--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="skip">Пропустить</string>
     <string name="notes">Notes</string>
     <string name="start">Начать</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
