--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="start">Начать</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="default_notification_channel_id">notification_channel</string>
 </resources>
